Code Signing on macOS

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,25 +106,21 @@ jobs:
               env:
                 GITHUB_TOKEN: ${{ secrets.JUNIPER_TOKEN }}
               run: |
-                Write-Output "GITHUB_ACTOR=${{ github.actor }}"
-                Write-Output "GITHUB_REPOSITORY=${{ github.repository }}"
+                echo "GITHUB_ACTOR=${{ github.actor }}"
+                echo "GITHUB_REPOSITORY=${{ github.repository }}"
                 git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-                    git config --global user.name "${{ github.actor }}"
-                    git remote set-url origin https://${{ github.actor }}:${{ secrets.JUNIPER_TOKEN }}@github.com/${{ github.repository }}.git
-                    git pull origin refs/heads/main --force --allow-unrelated-histories
+                git config --global user.name "${{ github.actor }}"
+                git remote set-url origin https://${{ github.actor }}:${{ secrets.JUNIPER_TOKEN }}@github.com/${{ github.repository }}.git
+                git pull origin refs/heads/main --force --allow-unrelated-histories
 
-                    git lfs install
+                git lfs install
 
-                    git lfs untrack "*.dmg"
-                    git lfs track "*.dmg"
-                    
-                    git add .gitattributes
-
-                    git lfs track
-
-                    git add ./installers
-                    git commit -m "Automated commit by GitHub Actions"
-                    git push origin HEAD:refs/heads/main
+                git lfs track "*.dmg"
+                git add .gitattributes
+                
+                git add ./installers
+                git commit -m "Automated commit by GitHub Actions"
+                git push origin HEAD:refs/heads/main
 
 
     build-windows:
@@ -168,7 +164,7 @@ jobs:
               env:
                 GITHUB_TOKEN: ${{ secrets.JUNIPER_TOKEN }}
               run: |
-                Write-Output "GITHUB_ACTOR=${{ github.actor }}"
+                  Write-Output "GITHUB_ACTOR=${{ github.actor }}"
                   Write-Output "GITHUB_REPOSITORY=${{ github.repository }}"
                   git config --global user.email "${{ github.actor }}@users.noreply.github.com"
                   git config --global user.name "${{ github.actor }}"
