--- a/jccm/package.json
+++ b/jccm/package.json
@@ -5,7 +5,7 @@
   "description": "Juniper Cloud Connection Manager",
   "main": ".webpack/main",
   "scripts": {
-    "start": "nodemon --watch ./src --ext js,json --ignore ./src/Frontend/ --exec 'electron-forge start'",
+    "start": "pkill -9 node; nodemon --watch ./src --ext js,json --ignore ./src/Frontend/ --exec 'electron-forge start'",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
