--- a/jccm/package.json
+++ b/jccm/package.json
@@ -5,7 +5,7 @@
   "description": "Juniper Cloud Connection Manager",
   "main": ".webpack/main",
   "scripts": {
-    "start": "pkill -9 node; nodemon --watch ./src --ext js,json --ignore ./src/Frontend/ --exec 'electron-forge start'",
+    "start": "nodemon --watch ./src --ext js,json --ignore ./src/Frontend/ --exec 'electron-forge start'",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "make-deb": "electron-forge make --platform=linux --arch=x64 --targets=@electron-forge/maker-deb",
@@ -75,6 +75,7 @@
     "path-browserify": "^1.0.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-json-tree": "^0.19.0",
     "react-window": "^1.8.10",
     "sequelize": "^6.37.3",
     "set-cookie-parser": "^2.6.0",
