--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,6 +127,7 @@ jobs:
                   path: |
                       ./jccm/out/make/*.dmg
                       ./jccm/out/make/*.pkg
+                      ./jccm/out/make/zip/darwin/**/*.zip                      
 
     build-windows:
         runs-on: windows-latest
