--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,33 @@ jobs:
             - name: Check out repository
               uses: actions/checkout@v3
 
+            - name: Set up Node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: '20.10.0'
+
+            - name: Install Python and set up venv
+              run: |
+                  brew install python@3.9
+                  python3.9 -m venv myenv
+                  source myenv/bin/activate
+                  python3.9 -m ensurepip
+                  python3.9 -m pip install --upgrade pip
+                  python3.9 -m pip install setuptools
+              working-directory: ./jccm
+
+            - name: Install dependencies
+              run: |
+                  source myenv/bin/activate
+                  npm install
+              working-directory: ./jccm
+
+            - name: Install appdmg
+              run: |
+                  source myenv/bin/activate
+                  npm install --save-dev appdmg
+              working-directory: ./jccm
+
             - name: Install signing certificate
               run: |
                   KEYCHAIN_NAME=build.keychain
@@ -38,7 +65,7 @@ jobs:
                   security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_NAME
 
                   echo "Preventing keychain from locking..."
-                  security set-keychain-settings -t 3600 $KEYCHAIN_NAME
+                  security set-keychain-settings -lut 3600 $KEYCHAIN_NAME
 
                   echo "Importing certificate..."
                   security import signing_certificate.p12 -k $KEYCHAIN_NAME -P "${{ secrets.SIGNING_CERTIFICATE_PASSWORD }}" -T /usr/bin/codesign
@@ -49,37 +76,6 @@ jobs:
 
                   echo "Setting key partition list..."
                   security set-key-partition-list -S apple-tool:,apple: -s -k $KEYCHAIN_PASSWORD $KEYCHAIN_NAME
-
-              working-directory: ./jccm
-
-            - name: Set up Node.js
-              uses: actions/setup-node@v3
-              with:
-                  node-version: '20.10.0'
-
-            - name: Install Python and set up venv
-              run: |
-                  brew install python@3.9
-                  python3.9 -m venv myenv
-                  source myenv/bin/activate
-                  python3.9 -m ensurepip
-                  python3.9 -m pip install --upgrade pip
-                  python3.9 -m pip install setuptools
-
-              working-directory: ./jccm
-
-            - name: Install dependencies
-              run: |
-                  source myenv/bin/activate
-                  npm install
-
-              working-directory: ./jccm
-
-            - name: Install appdmg
-              run: |
-                  source myenv/bin/activate
-                  npm install --save-dev appdmg
-
               working-directory: ./jccm
 
             - name: Build and package (arm64)
@@ -130,7 +126,7 @@ jobs:
                   path: |
                       ./jccm/out/make/*.dmg
                       ./jccm/out/make/*.pkg
-                      ./jccm/out/make/zip/darwin/**/*.zip                      
+                      ./jccm/out/make/zip/darwin/**/*.zip
 
     build-windows:
         runs-on: windows-latest
