--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,11 +46,18 @@ jobs:
                   npm install --save-dev appdmg
               working-directory: ./jccm
 
+            - name: Generate Keychain Credentials
+              run: |
+                # Generate keychain name and password dynamically
+                export KEYCHAIN_NAME="build.keychain"
+                export KEYCHAIN_PASSWORD=$(openssl rand -base64 12)
+      
+                # Store them in the GITHUB_ENV to use in later steps
+                echo "KEYCHAIN_NAME=$KEYCHAIN_NAME" >> $GITHUB_ENV
+                echo "KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> $GITHUB_ENV
+      
             - name: Install signing certificate
               run: |
-                  KEYCHAIN_NAME=build.keychain
-                  KEYCHAIN_PASSWORD=$(openssl rand -base64 12)
-
                   echo "Decode signing certificate..."
                   echo "${{ secrets.SIGNING_CERTIFICATE }}" | base64 --decode > signing_certificate.p12
                   echo "${{ secrets.INSTALLING_CERTIFICATE }}" | base64 --decode > installing_certificate.p12
@@ -67,6 +74,9 @@ jobs:
                   echo "Preventing keychain from locking..."
                   security set-keychain-settings -lut 3600 $KEYCHAIN_NAME
 
+                  echo "Showing keychain info..."
+                  security show-keychain-info $KEYCHAIN_NAME
+
                   echo "Importing certificate..."
                   security import signing_certificate.p12 -k $KEYCHAIN_NAME -P "${{ secrets.SIGNING_CERTIFICATE_PASSWORD }}" -T /usr/bin/codesign
                   security import installing_certificate.p12 -k $KEYCHAIN_NAME -P "${{ secrets.INSTALLING_CERTIFICATE_PASSWORD }}" -T /usr/bin/codesign -T /usr/bin/productbuild
@@ -80,18 +90,27 @@ jobs:
 
             - name: Build and package (arm64)
               run: |
+                  echo "Unlocking keychain..."
+                  security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_NAME
+
                   source myenv/bin/activate
                   npm run make -- --platform=darwin --arch=arm64
               working-directory: ./jccm
 
             - name: Build and package (x64)
               run: |
+                  echo "Unlocking keychain..."
+                  security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_NAME
+
                   source myenv/bin/activate
                   npm run make -- --platform=darwin --arch=x64
               working-directory: ./jccm
 
             - name: Notarize and Staple Packages
               run: |
+                  echo "Unlocking keychain..."
+                  security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_NAME
+
                   set -ex  # Exit on error and print commands
 
                   function notarize_and_verify() {
